# professor_x

./: .gitignore  CMakeLists.txt  README.md  clean_and_preprocess.m  features_analysis.cpp  fftw.cpp  fftw_relative_powers.cpp  filter_data.m  higher_order_statistics.cpp  hjorth_parameters.cpp  matlab.mat  mcr1_2.m  post_process.cpp  process.cpp  save_signal_to_csv.m  shannon_entropy.cpp  simulate_live_data.cpp  simulate_udp_live_data.cpp  simulate_udp_live_data_savecsv.cpp  statistical_features.cpp  stft_relative_powers.cpp  training_matlab.m  trial_run.m  trial_udp_cpp.cpp  trial_udp_matlab.m  udp_live_data_final.cpp  zero_crossing_rate.cpp
html/: untitled2.html
include/: features_analysis.h  fftw.h  fftw_relative_powers.h  higher_order_statistics.h  hjorth_parameters.h  shannon_entropy.h  statistical_features.h  stft_relative_powers.h  zero_crossing_rate.h
machine_learning/: .gitignore  capstone_trial_decisionforest.ipynb  final_model.ipynb  final_training.ipynb  label_data.py  requirements.txt  training.ipynb
machine_learning/tflite/: model.tflite  old_model.tflite
preprocessing/: clean_and_preprocess.m  from_headset_to_robot.m
robot_control/: Movement_Module.h  Sensor_Module.h  robot_control.ino
